force-app/main/default/objects/Recovery__c/fields/FulfilledBy__c.field-meta.xml
<CustomField>
    <fullName>FulfilledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Full filled by user will be stored.</description>
    <label>Fulfilled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries</relationshipName>
    <type>Lookup</type>
</CustomField>