force-app/main/default/objects/Recovery__c/fields/Goodwill_Type__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Type__c</fullName>
    <description>QCC: Created to show/store Type of goodwill given to customer.</description>
    <label>Goodwill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baggage Claim Settlement (payment type CC/EFT)</fullName>
            </value>
            <value>
                <fullName>Credit Card Refund</fullName>
            </value>
            <value>
                <fullName>Qantas club lounge passes</fullName>
            </value>
            <value>
                <fullName>Dinner vouchers</fullName>
            </value>
            <value>
                <fullName>Business Lounge Passes</fullName>
            </value>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>EFT Refund</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer Points</fullName>
            </value>
            <value>
                <fullName>Travel vouchers</fullName>
            </value>
            <value>
                <fullName>Valet Parking or Carwash</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Space available upgrade</fullName>
            </value>
            <value>
                <fullName>Firm space  upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>