force-app/main/default/objects/Recovery__c/fields/Goodwill_Value__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Value__c</fullName>
    <description>QCC: Created to show/store the value of the goodwill given.</description>
    <label>Goodwill Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>