force-app/main/default/objects/Recovery__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>QCC; Used to store the International Bank Account Number (IBAN) value which is converted from the Account Number for certain countries.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required for bank accounts in UK/Europe</inlineHelpText>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>