force-app/main/default/objects/Recovery__c/fields/Investigated_By__c.field-meta.xml
<CustomField>
    <fullName>Investigated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store person who investigated the recovery</description>
    <label>Investigated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries_User_CIBY</relationshipName>
    <type>Lookup</type>
</CustomField>