force-app/main/default/objects/Recovery__c/fields/Invoice_Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Claim_Description__c</fullName>
    <description>QCC: Used to store a description for finance about the claim/invoice for EFT/Credit Card refunds. Shorter than regular description so it is contained within finance system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice/Claim Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>