force-app/main/default/objects/Recovery__c/fields/Issuance_currency__c.field-meta.xml
<CustomField>
    <fullName>Issuance_currency__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>