force-app/main/default/objects/Recovery__c/fields/Issuance_currency_validation_failure_rea__c.field-meta.xml
<CustomField>
    <fullName>Issuance_currency_validation_failure_rea__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance currency validation failure rea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>