force-app/main/default/objects/Recovery__c/fields/Issuance_email__c.field-meta.xml
<CustomField>
    <fullName>Issuance_email__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance email</label>
    <type>Email</type>
</CustomField>