force-app/main/default/objects/Recovery__c/fields/Issuance_email_address_validation__c.field-meta.xml
<CustomField>
    <fullName>Issuance_email_address_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Issuance email address validation</label>
    <type>Checkbox</type>
</CustomField>