force-app/main/default/objects/Recovery__c/fields/Issuance_email_address_validation_failur__c.field-meta.xml
<CustomField>
    <fullName>Issuance_email_address_validation_failur__c</fullName>
    <description>Issuance email address validation failure reason.
Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance email address validation failur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>