force-app/main/default/objects/Recovery__c/fields/Issuance_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Issuance_phone_number__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance phone number</label>
    <type>Phone</type>
</CustomField>