force-app/main/default/objects/Recovery__c/fields/Issuance_phone_number_validation__c.field-meta.xml
<CustomField>
    <fullName>Issuance_phone_number_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Issuance phone number validation</label>
    <type>Checkbox</type>
</CustomField>