force-app/main/default/objects/Recovery__c/fields/Issuance_phone_number_validation_failure__c.field-meta.xml
<CustomField>
    <fullName>Issuance_phone_number_validation_failure__c</fullName>
    <description>Issuance phone number validation failure reason.

Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance phone number validation failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>