force-app/main/default/objects/Recovery__c/fields/Issuance_status__c.field-meta.xml
<CustomField>
    <fullName>Issuance_status__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuance status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>