force-app/main/default/objects/Recovery__c/fields/isUserRecoveryCreator__c.field-meta.xml
<CustomField>
    <fullName>isUserRecoveryCreator__c</fullName>
    <description>To determine if the current running user is the REcovery owner</description>
    <formula>$User.Id = CreatedById</formula>
    <label>isUserRecoveryCreator</label>
    <type>Checkbox</type>
</CustomField>