force-app/main/default/objects/Recovery__c/fields/LoungePassErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LoungePassErrorMessage__c</fullName>
    <description>QCC: Error messages from OPLA API if it returns an error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lounge Pass Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>