force-app/main/default/objects/Recovery__c/fields/LoungePassReference__c.field-meta.xml
<CustomField>
    <fullName>LoungePassReference__c</fullName>
    <description>QCC: The reference number or text from OPLA after calling the API to generate Lounge Pass</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lounge Pass Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>