force-app/main/default/objects/Recovery__c/fields/LoungePassRequestTime__c.field-meta.xml
<CustomField>
    <fullName>LoungePassRequestTime__c</fullName>
    <description>QCC: The time when Lounge Pass is requested by calling the OPLA API</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lounge Pass Request Time</label>
    <type>DateTime</type>
</CustomField>