force-app/main/default/objects/Recovery__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self Explanatory</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>