force-app/main/default/objects/Recovery__c/fields/Monetary_Value__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Value__c</fullName>
    <description>QCC: Used to track the monetary value of the payment in any currency</description>
    <inlineHelpText>Credit card - Must be AUD equivalent.
EFT - Must be currency of country of bank</inlineHelpText>
    <label>Monetary Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>