force-app/main/default/objects/Recovery__c/fields/ODP__c.field-meta.xml
<CustomField>
    <fullName>ODP__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ODP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>