force-app/main/default/objects/Recovery__c/fields/OM_Approved__c.field-meta.xml
<CustomField>
    <fullName>OM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: This is used for approval process.</description>
    <label>OM Approved</label>
    <type>Checkbox</type>
</CustomField>