force-app/main/default/objects/Recovery__c/fields/OM_Rejected__c.field-meta.xml
<CustomField>
    <fullName>OM_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: To be checked when OM rejected approval request</description>
    <label>OM Rejected</label>
    <type>Checkbox</type>
</CustomField>