force-app/main/default/objects/Recovery__c/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <description>QCC: Used to store the original currency the payment was made in</description>
    <label>Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED Emirati Dirham</fullName>
            </value>
            <value>
                <fullName>ARS Argentine Peso</fullName>
            </value>
            <value>
                <fullName>AUD Australian Dollar</fullName>
            </value>
            <value>
                <fullName>CAD Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>CHF Swiss Franc</fullName>
            </value>
            <value>
                <fullName>CLP Chilean Peso</fullName>
            </value>
            <value>
                <fullName>CNY Chinese Yuan Renminbi</fullName>
            </value>
            <value>
                <fullName>DKK Danish Krone</fullName>
            </value>
            <value>
                <fullName>EUR Euro</fullName>
            </value>
            <value>
                <fullName>FJD Fiji Dollar</fullName>
            </value>
            <value>
                <fullName>GBP Great Britain Pound</fullName>
            </value>
            <value>
                <fullName>HKD Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>IDR Indonesian Rupiah</fullName>
            </value>
            <value>
                <fullName>INR Indian Rupee</fullName>
            </value>
            <value>
                <fullName>JOD Jordanian Dinar</fullName>
            </value>
            <value>
                <fullName>JPY Japanese Yen</fullName>
            </value>
            <value>
                <fullName>KRW Korean Won</fullName>
            </value>
            <value>
                <fullName>KWD Kuwaiti Dinar</fullName>
            </value>
            <value>
                <fullName>MXN Mexican Peso</fullName>
            </value>
            <value>
                <fullName>MYR Malaysian Ringgit</fullName>
            </value>
            <value>
                <fullName>NOK Norwegian Krone</fullName>
            </value>
            <value>
                <fullName>NZD New Zealand Dollar</fullName>
            </value>
            <value>
                <fullName>OMR Rial Omani</fullName>
            </value>
            <value>
                <fullName>PGK Kina</fullName>
            </value>
            <value>
                <fullName>PHP Phillipine Peso</fullName>
            </value>
            <value>
                <fullName>PLN Zloty</fullName>
            </value>
            <value>
                <fullName>QAR Qatar Rial</fullName>
            </value>
            <value>
                <fullName>SAR Saudi Riyal</fullName>
            </value>
            <value>
                <fullName>SBD Solomon Islands Dollar</fullName>
            </value>
            <value>
                <fullName>SEK Swedish Krona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>