force-app/main/default/objects/Recovery__c/fields/Original_Currency_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency_Acronym__c</fullName>
    <formula>LEFT(TEXT(Original_Currency__c) , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Currency Acronym</label>
    <type>Text</type>
</CustomField>