force-app/main/default/objects/Recovery__c/fields/Other_Recovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Recovery_Type__c</fullName>
    <description>QCC: Created.</description>
    <label>Other Recovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diner Vouchers</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Valet</fullName>
            </value>
            <value>
                <fullName>Carpark</fullName>
            </value>
            <value>
                <fullName>Travel Vouchers</fullName>
            </value>
            <value>
                <fullName>Business Lounge Pass</fullName>
            </value>
            <value>
                <fullName>Qantas Lounge Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>