force-app/main/default/objects/Recovery__c/fields/Other_Recovery_Value__c.field-meta.xml
<CustomField>
    <fullName>Other_Recovery_Value__c</fullName>
    <description>QCC: Created to show/store Total value of recovery (AUD).</description>
    <label>Other Recovery Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>