force-app/main/default/objects/Recovery__c/fields/Overdue_Days_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days_Resolve__c</fullName>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>