force-app/main/default/objects/Recovery__c/fields/Pax_first_name__c.field-meta.xml
<CustomField>
    <fullName>Pax_first_name__c</fullName>
    <description>Used in exgratia flight pass recovery process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pax first name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>