force-app/main/default/objects/Recovery__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <description>QCC: Created to show/store Payment details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Details</label>
    <length>140</length>
    <type>Text</type>
</CustomField>