force-app/main/default/objects/Recovery__c/fields/Payment_Details_Added_Manually__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details_Added_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if Payment details are added or amended manually</description>
    <label>Payment Details Added Manually?</label>
    <type>Checkbox</type>
</CustomField>