force-app/main/default/objects/Recovery__c/fields/Payment_Details_Added_Online__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details_Added_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Details Added Online?</label>
    <type>Checkbox</type>
</CustomField>