force-app/main/default/objects/Recovery__c/fields/Payment_Details_received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Details received</label>
    <type>Checkbox</type>
</CustomField>