force-app/main/default/objects/Recovery__c/fields/Payment_eligibility__c.field-meta.xml
<CustomField>
    <fullName>Payment_eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Payment eligibility</label>
    <type>Checkbox</type>
</CustomField>