force-app/main/default/objects/Recovery__c/fields/Payment_Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Void_Date__c</fullName>
    <description>for CDP2-657 field label is changes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Cancelled Date</label>
    <type>DateTime</type>
</CustomField>