force-app/main/default/objects/Recovery__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <description>Used in exgratia flight pass recovery process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>