force-app/main/default/objects/Recovery__c/fields/PNR_remarks_updated_with_card_issuance__c.field-meta.xml
<CustomField>
    <fullName>PNR_remarks_updated_with_card_issuance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>PNR remarks updated with card issuance</label>
    <type>Checkbox</type>
</CustomField>