force-app/main/default/objects/Recovery__c/fields/POS_location__c.field-meta.xml
<CustomField>
    <fullName>POS_location__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>POS location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>