force-app/main/default/objects/Recovery__c/fields/Previous_Approvers_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Approvers_ID__c</fullName>
    <description>QCC: This is used in approval process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Approvers ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>