force-app/main/default/objects/Recovery__c/fields/Qantas_Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Payment_Reference_Number__c</fullName>
    <formula>Bank_Reference_Number__c +  Voucher_Number__c</formula>
    <label>Qantas Payment Reference Number</label>
    <type>Text</type>
</CustomField>