force-app/main/default/objects/Recovery__c/fields/Qantas_Points_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Points_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qantas Points Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>