force-app/main/default/objects/Recovery__c/fields/Recovery_Fulfilled_Date_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Fulfilled_Date_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery Fulfilled Date</label>
    <type>DateTime</type>
</CustomField>