force-app/main/default/objects/Recovery__c/fields/Recovery_Justification__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Justification__c</fullName>
    <description>QCC: Created to show/store why was the recovery necessary.(Removed from the page layout)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>