force-app/main/default/objects/Recovery__c/fields/Recovery_Locked__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true the recovery is locked</description>
    <label>Recovery Locked</label>
    <type>Checkbox</type>
</CustomField>