force-app/main/default/objects/Recovery__c/fields/Recovery_Points__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Points__c</fullName>
    <description>QCC: Created to show/store Total number of points given.</description>
    <label>Recovery Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>